--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "extra": {
     "laravel": {
         "providers": [
-            "GooberBlox\\Providers\\GooberBloxServiceProvider"
+            "GooberBlox\\Providers\\GooberBloxServiceProvider",
+            "GooberBlox\\Providers\\GooberBloxSettingsServiceProvider"
             ]
         }
     },
