--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "minimum-stability": "dev",
     "require": {
         "virtubrick/grid": "^1.0.1",
-        "mikebronner/laravel-model-caching": "12.0.2"
+        "mikebronner/laravel-model-caching": "12.0.2",
+        "league/flysystem-aws-s3-v3": "^3.31"
     }
 }
